--- a/src/GeekStream.Web/Views/Shared/_ArticlesListCards.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ArticlesListCards.cshtml
@@ -6,7 +6,7 @@
   var articleId = item.Id;
     var categoryIcon = item.CategoryIcon.FileName;
     var userIcon = item.UserIcon.FileName;
-    <div class="card mb-2 card-8px-border">
+    <div class="card mb-2 card-8px-border shadow-sm">
         <div class="card-body">
             <div class="card-navbar justify-content-between">
                 <div class="navbar-right">
@@ -26,7 +26,7 @@
             <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
                 <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
             </a>
-            <p>@Html.DisplayFor(modelItem => item.Content)</p>
+            <p class="text-muted mb-2">@Html.DisplayFor(modelItem => item.Content)</p>
             <div class="d-flex justify-content-between">
                 <div class="float-right d-flex align-items-center">
                     <img src="/images/comments.png" style="height: 20px" class="mr-2"/>
