--- a/src/GeekStream.Web/Views/Users/UserProfile.cshtml
+++ b/src/GeekStream.Web/Views/Users/UserProfile.cshtml
@@ -7,13 +7,13 @@
 
 
 <div class="card mb-2 rounded-0">
-    <div class="card-body justify-content-between align-items-center">
+    <div class="card-body d-flex justify-content-between align-items-center pt-3 pb-3">
             <div class="float-left d-flex align-items-center">
-                <img class="user__icon mr-3" width="80" src="/images/@Model.UserIcon.FileName"/>
+                <img class="user__icon mr-3" width="60" src="/images/@Model.UserIcon.FileName"/>
                 <h3 class="card-title mb-0 mr-2">@Model.UserName</h3>
                 <p>Рейтинг: @Model.Rating</p>
             </div>
-            <div class="float-right">
+            <div class="float-right d-flex align-items-center">
                 @if (Model.UserMail != User.Identity.Name)
                 {
                     @if (Model.IsSubscribed)
@@ -43,7 +43,7 @@
   var articleId = item.Id;
     var categoryIcon = item.CategoryIcon.FileName;
     var userIcon = item.UserIcon.FileName;
-    <div class="card mb-2 card-8px-border">
+    <div class="card mb-2 card-8px-border shadow-sm">
         <div class="card-body">
             <div class="card-navbar justify-content-between">
                 <div class="navbar-right">
@@ -63,7 +63,7 @@
             <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
                 <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
             </a>
-            <p>@Html.DisplayFor(modelItem => item.Content)</p>
+            <p class="text-muted mb-2">@Html.DisplayFor(modelItem => item.Content)</p>
             <div class="d-flex justify-content-between">
                 <div class="float-right d-flex align-items-center">
                     <img src="/images/comments.png" style="height: 20px" class="mr-2"/>
