--- a/src/GeekStream.Web/Views/Users/Index.cshtml
+++ b/src/GeekStream.Web/Views/Users/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="card mb-2">
                 <div class="card-body">
                     <div class="card-navbar">
-                        <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@item.Id">@item.FirstName @item.LastName</a>
+                        <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@item.Id" class="text-dark">@item.FirstName @item.LastName</a>
                     </div>
                 </div>
             </div>
