Add Mail Sender

--- a/src/GeekStream.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/src/GeekStream.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -3,8 +3,6 @@
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
-
 <h4>
-    If you have an account with us, we have sent an email
-    with the instructions to reset your password.
+    Прежде чем продолжить, пожалуйста, подтвердите Вашу электронную почту, нажав на подтвержающее письмо на Вашей почте
 </h4>
