--- a/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
@@ -2,6 +2,9 @@
 @model GeekStream.Core.ViewModels.Article.ArticleDetailsViewModel;
 @{
 
+    <script type="text/javascript">
+    </script>
+
     var articleId = @Model.Id;
 <div class="card mb-2 card-8px-border shadow-sm">
     <div class="card-body">
@@ -21,19 +24,21 @@
             </div>
         </div>
         <h3 class="card-title font-weight-bold"> @Html.DisplayFor(modelItem => Model.Title)</h3>
-        @foreach (var image in Model.Images)
-        { 
-            <img src="~/images/@image.FileName"/>
-        }
         <p class="text-muted mb-2">@Html.DisplayFor(modelItem => Model.Content)</p>
+        <div id="images">
+            @foreach (var image in Model.Images)
+            { 
+            <img data-enlargeable src="~/images/@image.FileName" style="cursor: zoom-in" width=" 100" />
+            }
+        </div>
         <div class="d-flex mb-0 justify-content-between float-right align-items-center">
-            <form asp-controller="Vote" asp-action="ProcessVotes" class="upvote__post mr-2" articleId="@Model.Id">
+            <form asp-controller="Vote" asp-action="ProcessVotes" class="vote__post mr-2" articleId="@Model.Id">
                 <input type="hidden" asp-for="@articleId"/>
                 <input type="hidden" name="type" value="@VoteType.UpVote" class="vote"/>
                 <img type="image" src="/images/upvote.png"/>
             </form>
             <p class="mr-2" id="rating__@Model.Id">@Html.DisplayFor(modelItem => Model.Rating)</p>
-            <form asp-controller="Vote" asp-action="ProcessVotes" class="downvote__post" articleId="@Model.Id">
+            <form asp-controller="Vote" asp-action="ProcessVotes" class="vote__post" articleId="@Model.Id">
                 <input type="hidden" asp-for="@articleId"/>
                 <input type="hidden" name="type" value="@VoteType.DownVote" class="vote"/>
                 <img  type="image" src="/images/downvote.png"/>
@@ -61,13 +66,13 @@
                                 Ответить
                             </b>
                                 <div class="d-flex mb-0 justify-content-between float-right align-items-center">
-                                    <form asp-controller="Vote" asp-action="ProcessVotesOnReply" class="upvote__comment mr-2" commentId="@item.Id">
+                                    <form asp-controller="Vote" asp-action="ProcessVotesOnReply" class="vote__comment mr-2" commentId="@item.Id">
                                         <input type="hidden" asp-for="@commentId"/>
                                         <input type="hidden" name="type" value="@VoteType.UpVote" class="vote"/>
                                         <img type="image" src="/images/upvote.png"/>
                                     </form>
                                     <p class="mr-2" id="rating__@item.Id">@Html.DisplayFor(modelItem => item.Rating)</p>
-                                    <form asp-controller="Vote" asp-action="ProcessVotesOnReply" class="downvote__comment" commentId="@item.Id">
+                                    <form asp-controller="Vote" asp-action="ProcessVotesOnReply" class="vote__comment" commentId="@item.Id">
                                         <input type="hidden" asp-for="@commentId"/>
                                         <input type="hidden" name="type" value="@VoteType.DownVote" class="vote"/>
                                         <img type="image" src="/images/downvote.png"/>
