--- a/src/GeekStream.Web/Views/Users/UserProfile.cshtml
+++ b/src/GeekStream.Web/Views/Users/UserProfile.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = Model.UserName;
 }
 
+@using System.Security.Claims
 
 <div class="card mb-2 rounded-0">
     <div class="card-body d-flex justify-content-between align-items-center pt-3 pb-3">
@@ -43,6 +44,10 @@
   var articleId = item.Id;
     var categoryIcon = item.CategoryIcon.FileName;
     var userIcon = item.UserIcon.FileName;
+    if (User.FindFirst(ClaimTypes.NameIdentifier)?.Value == @Model.Id)
+    {
+        <a class="btn btn-primary" asp-controller="Articles" asp-action="Edit" asp-route-id="@item.Id" >Редактировать</a>
+    }
     <div class="card mb-2 card-8px-border shadow-sm">
         <div class="card-body">
             <div class="card-navbar justify-content-between">
