--- a/src/GeekStream.Web/Views/Categories/Index.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="card mb-2 rounded-0">
     <div class="card-body d-flex justify-content-between align-items-center pt-3 pb-3">
         <div class="float-left d-flex align-items-center">
-            <img class="category__icon" width="60" src="/images/@Model.CategoryIcon.FileName"/>
+            <img class="category__icon mr-3" width="60" src="/images/@Model.CategoryIcon.FileName"/>
             <h3 class="card-title">@Model.Name</h3>
         </div>
 
