--- a/src/GeekStream.Web/Views/Articles/Edit.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Edit.cshtml
@@ -6,6 +6,7 @@
 }
 <form method="post" asp-controller="Articles" asp-action="EditArticle" enctype="multipart/form-data" >
     <input type="hidden" asp-for="Id"/>
+    <input type="hidden" asp-for="FilePaths"/>
     <div class="navbar">
         <h5>Новая статья</h5>
         <div class="text-right mb-0">
